# FFXIVDataLoader

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: dinput_wrapper.rs  hook.rs  lib.rs  sqpack_redirector.rs  util.rs  winapi.rs  wmvcore_wrapper.rs
src/virtual_sqpack/: archive.rs  data.rs  mod.rs
