[package]
name = "ffxiv_data_loader"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
dlopen = { version = "^0.1" }
dlopen_derive = { version = "^0.1" }
detour = { version = "0.7.1", default-features = false }
widestring = { version = "^0.4" }
log = { version = "^0.4" }
pretty_env_logger = { version = "^0.4" }