[package]
name = "ffxiv_data_loader"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
detour = { version = "0.7.1", default-features = false }
widestring = { version = "^0.4" }
log = { version = "^0.4" }
pretty_env_logger = { version = "^0.4" }
walkdir = { version = "^2.3" }
pathdiff = { version = "0.2.0" }
async-std = { version = "^1.6", features = ["attributes", "alloc"], default-features = false }

sqpack = { version = "^0.1", git = "https://github.com/dlunch/sqpack" }
